--- a/index.html
+++ b/index.html
@@ -129,16 +129,19 @@
                         <label for="">First Class : $150 X</span id="invoice-first-class"></label>
                     </div> -->
                     <div class="left">
-                        <p>First Class :</p>
+                        <p>First Class : $150 x</p>
                     </div>
                     <div class="right">
-                        <p id="invoice-tax">$0</p>
+                        <p id="invoice-first-class"></p>
                     </div>
 
                 </div>
                 <div class="input-group f-class">
-                    <div>
-                        <label for="">Economy : $100 x <span id="invoice-economy"></span></label>
+                    <div class="left">
+                        <p>Economy : $100 x</p>
+                    </div>
+                    <div class="right">
+                        <p id="invoice-economy"></p>
                     </div>
                 </div>
                 <div class="calculations">
@@ -213,14 +216,20 @@
             bookingArea.style.display = "none";
             const invoiceArea = document.getElementById('invoice-area');
             invoiceArea.style.display = "block";
+            const invoiceFirst = document.getElementById('first-class-count').value;
+            document.getElementById('invoice-first-class').innerText = invoiceFirst;
+            const invoiceEconomy = document.getElementById('economy-count').value;
+            document.getElementById('invoice-economy').innerText = invoiceEconomy;
         })
         document.getElementById('invoice-btn').addEventListener('click', function () {
             const bookingArea = document.getElementById('booking-area');
             bookingArea.style.display = "block";
             const invoiceArea = document.getElementById('invoice-area');
             invoiceArea.style.display = "none";
+
             
         })
+
         // function invoice() {
         //     const quantity = document.getElementById('first-class-count').value;
         //     // const quantityNumber = parseInt(quantity);
